memorials in without styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@
     @apply hover:text-lightBrown transition-colors lg:pr-5;
   }
 
+  .panel {
+    @apply bg-black rounded-md bg-opacity-50 p-5 mx-auto;
+  }
+
   .news-item {
     @apply text-xl;
   }
@@ -16,34 +20,37 @@
   }
 
   .btn {
-    @apply mx-auto max-w-min p-2 rounded-md border-2 border-opacity-0 transform transition-all hover:scale-110 hover:border-opacity-100
+    @apply mx-auto p-2 rounded-md border-2 border-opacity-0 transform transition-all hover:scale-110 hover:border-opacity-100;
   }
 
-  .bg-image, .bg-overlay {
+  .bg-image,
+  .bg-overlay {
     position: fixed;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  z-index: -1;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    z-index: -1;
   }
 
   .bg-overlay {
     z-index: 1;
-    background-color: rgba(0,0,0,.8);
-    
+    background-color: rgba(0, 0, 0, 0.8);
   }
-  
+
+  .names-row {
+    grid-auto-rows: 1fr;
+  }
 }
 
 @layer base {
-  input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    margin: 0; 
-}
+    margin: 0;
+  }
   button {
-    @apply bg-medBrown border-lightBrown
+    @apply bg-medBrown border-lightBrown;
   }
 }
