--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,20 @@
     @apply divide-white divide-opacity-30;
   }
 
+  .video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+  }
+  .video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+
   .bg-image,
   .bg-overlay {
     position: fixed;
