--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
   }
 
   .panel {
-    @apply bg-black rounded-md bg-opacity-50 p-5 mx-auto;
+    @apply bg-transparent rounded-md bg-opacity-50 p-5 mx-auto;
   }
 
   .news-item {
@@ -37,11 +37,11 @@
   }
 
   .btn {
-    @apply mx-auto p-2 rounded-md border-2 border-opacity-0 transform transition-all hover:scale-110 hover:border-opacity-100;
+    @apply mx-auto p-2 rounded-lg border-2 border-opacity-0 transform transition-all hover:scale-110 hover:border-opacity-100 text-white;
   }
 
   .divider {
-    @apply divide-white divide-opacity-30;
+    @apply divide-black;
   }
 
   .video-responsive {
